correcting the overflow property

--- a/src/styles/loginPage.scss
+++ b/src/styles/loginPage.scss
@@ -54,4 +54,5 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        overflow: auto;
 }
